  done by adding the 'onlyLoginForm' parameter to the '/login' request.
  Optionally, a 'submitToURI' parameter can be supplied to force the login
  form to submit to the given URI (otherwise the server will try to figure
  out the full URI to its own login controller). This functionality may be
  useful when you want to embed the login form in some external page, as
  an IFRAME otherwise.

=== 0.4.2 :: 2007-07-26

* The LDAP/AD authenticator has been largely re-written. The code is a bit
  cleaner now, and should work better with non-Active Directory LDAP servers
  (although this has yet to be tested since I don't have access to a non-AD
  LDAP server).
* The validate() method in your authenticators now receives a :service element
  (in addition to :username, and :password). This is simply the service
  url (if any) specified in the user's CAS request. If you call 
  read_standard_credentials(credentials) at the top of your validator, the value
  will also be available as @service along with @username and @password.
* By request, a :username_prefix option has been added to the ldap 
  configuration. If entered, this string will be automatically prefixed to 
  the username entered by the user.
* A bug having to do with handling authenticator errors has been fixed.
  Any authenticator error messages should now be correctly shown on the
  login page.
* Minor improvements to error messages having to do with login tickets.
  They're a bit more prescriptive now, explaining to the user what steps
  they should take to correct the error.

=== 0.4.1 :: 2007-06-07

* This release restores compatiblity with older versions of rubygems
  (pre-0.9.0). To achieve this, we alias the 'gem' method to the old 
  'require_gem' if 'gem' is not already defined.
* rubycas-server-ctl will now quiety delete an orphaned .pid file 
  instead complaining loudly and refusing to start up.
* Fixed minor bug in rubycas-server-ctl that sometimes incorrectly reported